--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
     <header class="cabecalho">
-        <a href=""><h1 class="cabecalho-logo">foot shop</h1></a>
+        <a href="index.html"><h1 class="cabecalho-logo">foot shop</h1></a>
         <nav class="cabecalho-nav">
-            <a href="" class="cabecalho-nav-item">shop</a>
-            <a href="" class="cabecalho-nav-item">contact</a>
+            <a href="index.html" class="cabecalho-nav-item">shop</a>
+            <a href="error/problem.html" class="cabecalho-nav-item">contact</a>
         </nav>
     </header>
 
