--- a/problem.html
+++ b/problem.html
@@ -9,9 +9,9 @@
 <body>
 
     <header class="cabecalho">
-        <a href="../index.html"><h1 class="cabecalho-logo">foot shop</h1></a>
+        <a href="index.html"><h1 class="cabecalho-logo">foot shop</h1></a>
         <nav class="cabecalho-nav">
-            <a href="../index.html" class="cabecalho-nav-item">shop</a>
+            <a href="index.html" class="cabecalho-nav-item">shop</a>
             <a href="problem.html" class="cabecalho-nav-item">contact</a>
         </nav>
     </header>
