--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="index.html"><h1 class="cabecalho-logo">foot shop</h1></a>
         <nav class="cabecalho-nav">
             <a href="index.html" class="cabecalho-nav-item">shop</a>
-            <a href="error/problem.html" class="cabecalho-nav-item">contact</a>
+            <a href="problem.html" class="cabecalho-nav-item">contact</a>
         </nav>
     </header>
 
